# Repo-Naut

./: .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.cursor/rules/: project.mdc  tauri-commands.mdc
.github/workflows/: release.yml
assets/: screens.psd
docs/: build-guide.md  cloudflare-pages-deploy.md  development-setup.md  development-workflow.md  improvement-considerations.md  post-mvp-roadmap.md  tasks.md  zenn-article-draft.md  zenn-article.md
landing/: index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
landing/src/: App.tsx  constants.ts  index.css
spec/: RepoHub — 仕様・設計書.md  ランディングページ — 仕様・設計書.md
spec/archive/: Repo-Naut プロダクトLP 設計・仕様書.md  ランディングページ — 仕様・方針.md
src/: index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: command_path.rs  lib.rs  main.rs  models.rs  store.rs  watcher.rs
src-tauri/src/commands/: archive.rs  backup.rs  git.rs  github.rs  kanban.rs  mod.rs  repo_create.rs  scripts.rs  settings.rs  workspace.rs
src/hooks/: useArchive.ts  useBackup.ts  useEditor.ts  useGitOps.ts  useGithub.ts  useRepoCreate.ts  useRepos.ts  useScripts.ts  useSettings.ts  useTasks.ts  useThemeSync.ts  useWorkspaceWatcher.ts  useWorkspaces.ts
src/pages/: Archive.tsx  Dashboard.tsx  Kanban.tsx  RepoDetail.tsx  Repos.tsx  Settings.tsx
src/store/: useAppStore.ts  useToast.ts
src/types/: index.ts
(+30 files in other folders)
