[package]
name = "repohub"
version = "0.1.0"
description = "A desktop app for managing multiple local Git repositories"
authors = ["Masataka Koguchi"]
edition = "2021"

[lib]
name = "repohub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
notify = { version = "7", features = ["macos_fsevent"] }
reqwest = { version = "0.12", features = ["json"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
open = "5"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
